===============================================================


--------------------------------------------------------------------------
NEWS for version 0.4 (released date unknown)
--------------------------------------------------------------------------

New Features
============

o The library does not call abort(): an appropriate error message is thrown
  in this case. 

o  ...


Bugfixes
========

o A vertex built with a negative denominator is transformed into the
  corresponding vertex with a positive denominator. Previously, a vertex
  with a negative denominator was accepted, even if then it was declared
  illegal.

o  ...


--------------------------------------------------------------------------
NEWS for version 0.3 (released on February 26, 2002)
--------------------------------------------------------------------------

New Features
============

o  The library has been ported under libtool: it is now possible
   to build dynamic libraries as well.

o  We now use the integer C++ class of GMP to represent the
   coefficients of constraints and generators, instead of our own
   (very much inferior) Integer class.  The drawback is that we
   now require GMP 4.0.1 or higher.

o  New methods Polyhedron::convex_difference_assign(const Polyhedron&) and
   Polyhedron::convex_difference_assign_and_minimize(const Polyhedron&).
   They assigns to *this the convex hull of the set-theoretic difference
   of *this and the argument (possibly non minimized or minimized,
   respectively).

o  The method Polyhedron::add_generators(GenSys&) is now lazy,
   i.e., no minimization is performed.  Adding generators and
   minimizing at the same time is provided by the method
   Polyhedron::add_generators_and_minimize(GenSys&).
   These methods now throw an exception if the resulting
   polyhedron would be illegal.

o  Some performance improvements.

o  Added more test programs.


Bugfixes
========

o  Fixed Polyhedron::satisfies(const Constraints&) and