@@ -573,6 +573,10 @@ public:
   //! is a universe polyhedron.
   bool check_universe() const;
 
+  //! Returns <CODE>true</CODE> if and only if \p *this
+  //! is a bounded polyhedron.
+  bool is_bounded() const;
+
   //! Returns <CODE>true</CODE> if and only if
   //! polyhedron \p x is contained in polyhedron \p y.
   //! \exception std::invalid_argument thrown if \p x and \p y
